--- a/Rasterizer/Rasterizer.csproj
+++ b/Rasterizer/Rasterizer.csproj
@@ -2,7 +2,12 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net472</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="OpenTK" Version="4.0.1" />
+    </ItemGroup>
 
 </Project>
